--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-cxx",
-  "version": "0.1.6",
+  "version": "0.1.12",
   "type": "module",
   "license": "MIT",
   "author": "Loïc Chen",
@@ -10,7 +10,7 @@
   },
   "files": [
     "index.js",
-    "template-*",
+    "template-minimalist",    
     "dist"
   ],
   "scripts": {
