--- a/template-minimalist/CMakeLists.txt
+++ b/template-minimalist/CMakeLists.txt
@@ -1,15 +1,26 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 option(GLOBAL_VCPKG "Use global Vcpkg " OFF)
-
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 if (GLOBAL_VCPKG)
     set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
 else()
     set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake)
 endif()
 
-project(my-cxx-project)
+option(CCACHE "Use ccache to speed up recompilation" ON)
+if(CCACHE)
+    find_program(CCACHE_FOUND ccache)
+    if(CCACHE_FOUND)
+        set(PATH_TO_CCACHE ccache)
+    else()
+        message(WARNING "Ccache path not found, disabling ccache")
+    endif(CCACHE_FOUND)
+    set(CXX_COMPILER_LAUNCHER PATH_TO_CCACHE)
+endif(CCACHE)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+project()
 
 find_package(fmt CONFIG REQUIRED)
 
