--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "scripts": {
     "dev": "unbuild --stub",
-    "build": "unbuild"
+    "build": "unbuild",
+    "prepublishOnly": "bun run build"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
