--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepublishOnly": "bun run build"
   },
   "devDependencies": {
+    "@inquirer/prompts": "^4.3.2",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/bun": "latest",
     "chalk": "^5.3.0",
