--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "dev": "unbuild --stub",
     "build": "unbuild",
+    "prettier": "bunx prettier . --write",
     "prepublishOnly": "bun run build"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "cross-spawn": "^7.0.3",
+    "prettier": "^3.2.5",
     "unbuild": "^2.0.0"
   },
   "peerDependencies": {
