--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,9 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
-  release:
-      types: [published]
-  workflow_dispatch:
+  # release:
+  #     types: [published]
+  # workflow_dispatch:
 
 
 jobs:
