--- a/package.json
+++ b/package.json
@@ -4,6 +4,18 @@
   "type": "module",
   "license": "MIT",
   "author": "Loïc Chen",
+  "homepage": "https://github.com/painfulexistence/create-cxx",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:painfulexistence/create-cxx.git"
+  },
+  "keywords": [
+    "c++",
+    "cmake",
+    "vcpkg",
+    "node",
+    "bun"
+  ],
   "bin": {
     "create-cxx": "index.js",
     "cxx": "index.js"
@@ -24,7 +36,7 @@
     "@inquirer/prompts": "^4.3.2",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/bun": "latest",
-    "chalk": "^5.3.0",
+    "ansicolor": "^2.0.3",
     "commander": "^12.0.0",
     "cross-spawn": "^7.0.3",
     "prettier": "^3.2.5",
