Update existing templates

--- a/template-raylib/CMakeLists.txt
+++ b/template-raylib/CMakeLists.txt
@@ -31,7 +31,11 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(raylib)
 
-add_executable(main src/main.cpp)
+set(SOURCES
+    src/main.cpp
+)
+
+add_executable(main ${SOURCES})
 target_compile_features(main PRIVATE cxx_std_20)
 set_target_properties(main PROPERTIES CXX_EXTENSIONS OFF)
 target_link_libraries(main PRIVATE fmt::fmt raylib)
