--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dev": "unbuild --stub",
     "build": "unbuild",
     "prettier": "bunx prettier . --write",
+    "version": "npm version $(git cliff --bumped-version)",
     "prepublishOnly": "bun run build"
   },
   "devDependencies": {
