feat: Add sfml template

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "template-minimalist",
     "template-raylib",
     "template-magnum",
+    "template-sfml",
     "dist"
   ],
   "scripts": {
