feat: Add sdl2 & sdl3 templates

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "template-raylib",
     "template-magnum",
     "template-sfml",
+    "template-sdl2",
+    "template-sdl3",
     "dist"
   ],
   "scripts": {
