--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "commander": "^12.0.0",
     "cross-spawn": "^7.0.3",
     "prettier": "^3.2.5",
+    "release-it": "^17.2.0",
     "unbuild": "^2.0.0"
   },
   "peerDependencies": {
