feat: add ogre template

--- a/templates/ogre/CMakeLists.txt
+++ b/templates/ogre/CMakeLists.txt
@@ -12,4 +12,4 @@ set(SOURCES
 add_executable(main ${SOURCES})
 target_compile_features(main PRIVATE cxx_std_20)
 set_target_properties(main PROPERTIES CXX_EXTENSIONS OFF)
-target_link_libraries(main PRIVATE fmt::fmt OgreBites)
+target_link_libraries(main PRIVATE fmt::fmt OgreBites "-framework OpenGL")
